# somresumido

./: .env.template  .gitignore  README.md  compose.yaml  justfile  manage.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docker/dev/: Dockerfile  start  start.xsh
docker/prod/: Dockerfile  start.sh  start.xsh
somresumido/: asgi.py  celery.py  rabbitmq_consumer.py  settings.py  urls.py  wsgi.py
somresumido/audio/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
somresumido/audio/migrations/: 0001_initial.py
somresumido/base/: apps.py  managers.py  models.py  urls.py  views.py
somresumido/base/tests/: test_view.py
somresumido/templates/account/: _base.html  login.html
somresumido/templates/audio/: create_update.html  listing.html
somresumido/templates/base/: _base.html  _footer.html  _header.html  home.html
